@startuml class_diagram_overview

' Separator for namespace
set namespaceSeparator ::

' Logging
namespace logging #DDDEEE {
    class Logger {
    }
}
note top of logging: Used by many classes.

' Command line parser
namespace cmdLineParser #DDDEEE {
    class CmdLineParser {
    }
}

' OpenCV
namespace cv #DDDEEE {
}
note bottom of cv: OpenCV library.

' Computer vision
namespace computerVision #DDDEEE {
    class OpenCvWrapper {
    }
    OpenCvWrapper -> cv
}

' Circuit
namespace circuit #DDDEEE {
    class Component {
    }
    Component --> computerVision::OpenCvWrapper
    Component --> Node

    class Node {
    }
    Node --> computerVision::OpenCvWrapper
}

' Common
namespace common #DDDEEE {
    class RandomNumberGen {
    }
}

' Image processing
namespace imageProcessing #DDDEEE {
    class ImageProcManager {
    }
    ImageProcManager ..> ImageReceiver
    ImageProcManager ..> ImagePreprocessing
    ImageProcManager ..> ImageSegmentation
    ImageProcManager ..> computerVision::OpenCvWrapper

    class ImageReceiver {
    }
    ImageReceiver ..> computerVision::OpenCvWrapper

    class ImagePreprocessing {
    }
    ImagePreprocessing ..> computerVision::OpenCvWrapper

    class ImageSegmentation {
    }
    ImageSegmentation ..> computerVision::OpenCvWrapper
    ImageSegmentation --> circuit::Component
    ImageSegmentation --> circuit::Node
}

' Application
namespace application #DDDEEE {
    class Application {
    }
    Application ..> CommandLineParser
    Application ..> imageProcessing::ImageProcManager

    class CommandLineParser {
    }
    CommandLineParser ..> cmdLineParser::CmdLineParser
}

@enduml
